--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1 class="title">Bellaaaaaa</h1>
     <h2>Welcome to my world</h2>
     <a href="https://github.com/Bellaaaaaaa/GirlsCodingDayDemo">Github</a>
-    <a href="./resume.html">Resume</a>
+    <a href="./readme.html">Resume</a>
     </div>
 </body>
 </html>
